--- a/style.css
+++ b/style.css
@@ -5,16 +5,16 @@
 
 .premligne {
     width: 100%;
-    height: 30px;
-    background-color: rgba(0, 255, 255, 0.199);
+    height: 24px;
+    /* background-color: rgba(0, 255, 255, 0.199); */
     display: flex;
 }
 
 .premligne div {
-    width: 30px;
-    height: 30px;
+    width: 24px;
+    height: 24px;
     /* background-color: rgba(0, 0, 255, 0.317); */
-    border: 1px solid;
+    /* border: 1px solid; */
 }
 
 .black {
@@ -26,13 +26,21 @@
 }
 
 .orange {
-    background-color: orange;
+    background-color: rgb(237, 159, 16);
 }
 
 .lightOrange {
-    background-color: rgba(255, 166, 0, 0.539);
+    background-color: rgba(255, 166, 0, 0.803);
 }
 
 .yellow {
-    background-color: yellow;
+    background-color: rgba(248, 211, 2, 0.753);
+}
+
+.blue {
+    background-color: rgba(3, 20, 131, 0.989);
+}
+
+.white {
+    background-color: rgb(204, 216, 225);
 }
